<resources>
    <string name="app_name">Savitar Admin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="savitar">Savitar</string>
    <string name="new_here">New Here? Create Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="address">Address</string>
    <string name="resend_email">Resend Email</string>
    <string name="my_visits">My Visits</string>
    <string name="Profile">My Profile</string>
    <string name="addVisitor">Add Visitor</string>
    <string name="editVisitor">Edit Visitor</string>
    <string name="guestList">My Guest List</string>
    <string name="savitar_admin">Savitar Admin</string>
    <string name="Login">Login</string>
    <string name="next">Next</string>
    <string name="usersList">Users List</string>
    <string name="addUser">Add User</string>
    <string name="editUser">Edit User</string>
    <string name="condominium_title">My Condominiums</string>
    <string name="main_title">My Offices</string>
    <string name="main_subtitle">Please select your office</string>
</resources>